[package]
name = "eikonal"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
description = "Fast Marching Method for eikonal distance fields plus weighted grid shortest paths for routing"
repository = "https://github.com/i-norden/eikonal"
keywords = ["eikonal", "fmm", "pathfinding", "geodesic", "ndarray"]
categories = ["science::geo", "algorithms"]

[dependencies]
ndarray = "0.17"
thiserror = "2"
rayon = { version = "1", optional = true }

[features]
default = []
parallel = ["rayon"]
